--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-h5-audio-player": "^3.10.0",
+    "react-player": "^3.1.0",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
